assets/scss/_mobile-navigation.scss
$header-height: 84px;

#mobile-header {
  background: $colorCru-white;
  border-top: 4px solid $colorCru-gold;
  border-bottom: 1px solid #EBEBEB;
  height: $header-height;

  &:before,
  &:after {
    content: " "; // 1
    display: table; // 2
  }
  &:after {
    clear: both;
  }

  #mobile-logo {
    float: left;
    background: url("/assets/img/cru-mobile-logo.png") no-repeat 20px center;
    background-size: 80px 50px;
    width: 50%;
    height: 100%;
    max-height: $header-height;
  }

  #sign-in-section {
    vertical-align: bottom;
    display: table-cell;
    text-align: right;
    float: left;
    height: 100%;
    //max-height: $header-height;
    width: 50%;
    font-size: 16px;
    font-weight: 700;
    text-transform: uppercase;
    color: $colorGrayscale-rock;
    padding-bottom: 10px;

    #sign-in {
      display: inline-block;
      padding: 10px 10px;
    }

    // Mobile navigation icon
    #mobile-nav-icon {
      padding: 10px 10px;
      margin-right: 20px;
      display: inline-block;
      width: 30px;
      position: relative;
      transform: rotate(0deg);
      transition: .5s ease-in-out;
      cursor: pointer;
    }

    #mobile-nav-icon span {
      display: block;
      position: absolute;
      height: 2px;
      width: 100%;
      background: #d3531a;
      border-radius: 3px;
      opacity: 1;
      left: 0;
      transform: rotate(0deg);
      transition: .25s ease-in-out;
    }

    #mobile-nav-icon span:nth-child(1) {
      top: 0px;
    }

    #mobile-nav-icon span:nth-child(2), #mobile-nav-icon span:nth-child(3) {
      top: 9px;
    }

    #mobile-nav-icon span:nth-child(4) {
      top: 18px;
    }

    #mobile-nav-icon.open span:nth-child(1) {
      top: 9px;
      width: 0%;
      left: 50%;
    }

    #mobile-nav-icon.open span:nth-child(2) {
      transform: rotate(45deg);
    }

    #mobile-nav-icon.open span:nth-child(3) {
      transform: rotate(-45deg);
    }

    #mobile-nav-icon.open span:nth-child(4) {
      top: 18px;
      width: 0%;
      left: 50%;
    }
  }
}

.mobile-nav-wrap {
  height: 100%;
  width: 100%;
  z-index: 10;
  &.on {
    position: fixed;
  }
}

.mobile-nav-overlay {
  position: fixed;
  height: 100%;
  width: 100%;
  background: rgba(0,0,0,.55);
  z-index: 2;
}

#mobile-navigation {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow-x: hidden;

  // Navigation styles
  .menu-icons {
    list-style: none;
    margin: 0;
    transform: translateX(0%);
    background: #EBEBEB;
    border: none;
    height: 50px;
    width: auto;
    padding: 0;

    &:after {
      content: '';
      display: table;
      clear: both;
    }

    li {
      height: 50px;
      line-height: 50px;
      width: 16.66%;
      display: inline-block;
      float: left;
      padding: 0;
      margin: 0;
      line-height: auto;
      position: relative;
      text-align: center;
      vertical-align: middle;

      a {
        line-height: 50px;
        height: 100%;
        margin: 0;
        padding: 0;
        min-width: 0;
        display: block;
        zoom: normal;
        border: none;
        position: static;
      }

      img {
        display: inline-block;
        max-height: 25px;
        margin-top: -2px;
        vertical-align: middle;
        filter: grayscale(100%);
      }

      &.active img {
        filter: grayscale(0%);
      }
    }
  }

  .nav-tabs ~ .tab-content {
    padding: 0;
    overflow: visible;
  }

  .main-menu-container {
    position: relative;
    ul {
      background: #fff;
      position: absolute;
      top: 0;
      left: 100%;
      z-index: 1;
      width: 100%;
      margin: 0;
      padding: 0;
      transition: left .5s;

      &.main-menu {
        left: 0;
      }
    }

    li {
      list-style: none;
      margin: 0;
      padding: 10px 0 10px 20px;
      border-bottom: 1px solid #EBEBEB;
      font-weight: 500;
      text-transform: uppercase;
      font-size: 14px;
      &.has-children {
        background: url("/assets/img/mobile-menu-forward-arrow.png") no-repeat 90% 50%;
      }
      &:focus,
      &:active {
        outline: none;
        box-shadow: inset 0px 2px 7px rgba(0, 0, 0, 0.1);
        background-color: #f9f9f9;
      }
      a {
        display: block;
        color: $colorText;
        &:hover,
        &:active,
        &:focus {
          text-decoration: none;
        }
      }
    }
  }

  :not(.main-menu).visible li:first-child {
    font-weight: bold;
  }

  .tab-content {
    #mob-search, #mob-nearme {
      border-top: 1px solid #FFF;

      input {
        background-color: #EBEBEB;
        font-size: 24px;
        font-weight: 500;
        padding-top: 40px;
        padding-bottom: 40px;
        box-sizing: border-box;
        border-radius: 0;
        -webkit-box-sizing: border-box;
        -moz-box-sizing: border-box;
        border: none;
      }
    }
  }

  #mob-cart {
    .repeating-row {
      background-color: $colorGrayscale-stone;
      padding: 30px 15px;
      border-top: 1px solid $colorCru-white;
    }

    .title {
      color: $colorCru-gold;
      font-weight: 600;
    }

    .price {
      font-weight: 600;
    }

    .checkout {
      width: 100%;
      border-radius: 0;
      text-transform: uppercase;
    }
  }

  #mob-more {
    margin: 0;
    padding: 0;

    li {
      list-style: none;
      margin: 0;
      padding: 10px 10px 10px 20px;
      border-bottom: 1px solid #EBEBEB;
      font-weight: 500;
      text-transform: uppercase;
      font-size: 14px;

      img {
        vertical-align: middle;
        opacity: 1;
        max-height: 25px;
        width: auto;
        display: inline-block;
        padding-right: 20px;
        margin-top: -2px;
      }
    }
  }
}

